[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/themes/customization_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/font_32_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/selection.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/images/player/hair_01.png" type="Texture" id=5]
[ext_resource path="res://assets/themes/main_menu_button.tres" type="Theme" id=7]
[ext_resource path="res://assets/images/player/player_sprite.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/vaperwave_pattern.png" type="Texture" id=9]
[ext_resource path="res://src/Player/PlayerShader.gdshader" type="Shader" id=10]
[ext_resource path="res://src/Player/PlayerHair.gdshader" type="Shader" id=11]
[ext_resource path="res://src/Menu/CustomizationMenu.gd" type="Script" id=13]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;

void fragment() {
	vec2 uv = UV;
	float speed = 0.33;
	uv += vec2(TIME * speed, TIME * speed);
	COLOR = texture(TEXTURE, uv);
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 21 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.21155, 0.117, 0.3, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/blocked = null
shader_param/blink = false
shader_param/glow = null
shader_param/BLACK = null
shader_param/SKIN_COLOR = Color( 0.858824, 0.741176, 0.662745, 1 )
shader_param/SHIRT_COLOR = Color( 1, 1, 1, 1 )
shader_param/PANTS_COLOR = Color( 0.298039, 0.305882, 0.678431, 1 )
shader_param/SHOES_COLOR = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 96, 96 )
margin = Rect2( 0, -16, 0, -32 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 11 )
shader_param/blocked = null
shader_param/blink = null
shader_param/glow = null
shader_param/HAIR_COLOR = Color( 0.796078, 0.560784, 0, 1 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )
margin = Rect2( 0, -16, 0, -32 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/PlayerTR:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 96, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/HairTR:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 96, 96 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Rotate"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/PlayerTR:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 96, 96 ), Rect2( 0, 96, 96, 96 ), Rect2( 0, 192, 96, 96 ), Rect2( 0, 288, 96, 96 ), Rect2( 0, 0, 96, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/HairTR:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 96, 96 ), Rect2( 0, 96, 96, 96 ), Rect2( 0, 192, 96, 96 ), Rect2( 0, 288, 96, 96 ), Rect2( 0, 0, 96, 96 ) ]
}

[node name="CustomizationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
player_tr_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/PlayerTR")
hair_tr_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/HairTR")
name_le_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer/NameLE")
hair_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HairGC")
hair_color_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HairColorGC")
skin_color_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/SkinColorGC")
shirt_color_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ShirtColorGC2")
pants_color_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/PantsColorGC3")
shoes_color_gc_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ShoesColorGC4")
save_btn_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/SaveBtn")
back_btn_path = NodePath("MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/BackBtn")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.188235, 0.0627451, 0.25098, 1 )
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 217.0
margin_top = 44.0
margin_right = 743.0
margin_bottom = 495.0
focus_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
margin_right = 526.0
margin_bottom = 451.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer"]
margin_right = 526.0
margin_bottom = 451.0
focus_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 506.0
margin_bottom = 431.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 486.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Personalizar Avatar"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 486.0
margin_bottom = 411.0
custom_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 316.0
margin_bottom = 350.0
custom_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 316.0
margin_bottom = 222.0
focus_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
margin_right = 316.0
margin_bottom = 222.0
custom_styles/panel = SubResource( 20 )

[node name="PlayerTR" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
material = SubResource( 4 )
margin_left = 83.0
margin_top = 36.0
margin_right = 233.0
margin_bottom = 186.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource( 3 )
stretch_mode = 6

[node name="HairTR" type="TextureRect" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
material = SubResource( 15 )
margin_left = 83.0
margin_top = 36.0
margin_right = 233.0
margin_bottom = 186.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource( 16 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 238.0
margin_right = 316.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 316.0
margin_bottom = 17.0
text = "Nombre"

[node name="NameLE" type="LineEdit" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 21.0
margin_right = 316.0
margin_bottom = 54.0
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 308.0
margin_right = 316.0
margin_bottom = 350.0
custom_constants/separation = 16

[node name="BackBtn" type="Button" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 150.0
margin_bottom = 42.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
theme = ExtResource( 7 )
text = "Volver"

[node name="SaveBtn" type="Button" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 166.0
margin_right = 316.0
margin_bottom = 42.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
theme = ExtResource( 7 )
text = "Guardar"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 486.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 350 )
focus_mode = 2
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 100.0
margin_bottom = 310.0
custom_constants/separation = 10

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 31.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Peinados"

[node name="HairGC" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 100.0
margin_bottom = 41.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 100.0
margin_bottom = 55.0

[node name="Label2" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 100.0
margin_bottom = 82.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Color cabello"

[node name="HairColorGC" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 100.0
margin_bottom = 92.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 106.0

[node name="Label3" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 100.0
margin_bottom = 133.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Color de piel"

[node name="SkinColorGC" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 100.0
margin_bottom = 143.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 100.0
margin_bottom = 157.0

[node name="Label4" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 100.0
margin_bottom = 184.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Color de playera"

[node name="ShirtColorGC2" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 100.0
margin_bottom = 194.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 100.0
margin_bottom = 208.0

[node name="Label5" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 100.0
margin_bottom = 235.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Color de pantalon"

[node name="PantsColorGC3" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 100.0
margin_bottom = 245.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 100.0
margin_bottom = 259.0

[node name="Label6" type="Label" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 100.0
margin_bottom = 286.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Color de zapatos"

[node name="ShoesColorGC4" type="GridContainer" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 100.0
margin_bottom = 296.0
custom_constants/vseparation = 16
columns = 10

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 100.0
margin_bottom = 310.0

[node name="PlayerAP" type="AnimationPlayer" parent="."]
playback_speed = 0.2
anims/RESET = SubResource( 17 )
anims/Rotate = SubResource( 14 )

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="SelectionSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"
